--- a/start/01_06_ticking_time.html
+++ b/start/01_06_ticking_time.html
@@ -16,7 +16,12 @@
 
   <script>
     // Write your code here
-    
+   const clockEl = document.querySelector('#clock')
+   const currDate = new Date()
+   const currTime = currDate.toLocaleTimeString()
+   setTimeout(() => {
+    clockEl.innerHTML = currTime
+   }, 2000)
   </script>
 </body>
 
